--- a/tasks.org
+++ b/tasks.org
@@ -1,6 +1,7 @@
 * Make a maze
   - restrain the player movement
-* The vision is limited to a section of the maze
+* TODO The vision is limited to a section of the maze
 * Make ghosts
-* Create a sheep
-  - it jumps
+* DONE Create a sheep
+* TODO it jumps
+* DONE Create a player
